syntax = "proto3";
option java_multiple_files = true;
option java_package = "be.msec.labgrpc";
option java_outer_classname = "Proto";
option objc_class_prefix = "HLW";

//
service Server {
  // broadcast
  rpc sendMessages(MessageText) returns (Empty) {}

  rpc sendPrivateMsg(PrivateMessageText) returns (Empty) {}

  rpc connectUser(Client) returns (Empty) {}

  rpc disconnectUser(Client) returns (Empty) {}

  rpc getMessages(Client) returns (stream MessageText) {}

  rpc getOnlineClients(Empty) returns (stream Client) {}
}

message MessageText {
  string a = 1;
  string receiver = 2;
}

message PrivateMessageText {
  MessageText messageText = 1;
  string sender = 2;
}

message Client {
  string name = 1;
}

message Connected {
  bool isConnected = 1;
  string username = 2;
}

message Disconnected {
  bool isDisconnected = 1;
  string username = 2;
}

message Empty {};